<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_activity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Regester_activity_et_full_Name"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginStart="@dimen/Regester_activity_margin_Rigth_left"
                android:layout_marginTop="@dimen/Regester_activity_margin_between"
                android:layout_marginEnd="@dimen/Regester_activity_margin_between"
                android:layout_marginBottom="@dimen/Regester_activity_margin_between"
                android:layout_weight="1"
                android:background="@drawable/shap_size_radius_et"
                android:ems="10"
                android:hint="@string/full_Name"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/Regester_activity_iv_image"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_marginStart="@dimen/Regester_activity_margin_between"
                android:layout_marginTop="@dimen/Regester_activity_margin_between"
                android:layout_marginEnd="@dimen/Regester_activity_margin_Rigth_left"
                android:layout_marginBottom="@dimen/Regester_activity_margin_between"
                android:background="@drawable/shap_size_radius_img"
                app:srcCompat="@drawable/shap_size_radius_img" />
        </LinearLayout>

        <EditText
            android:id="@+id/Regester_activity_et_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/Regester_activity_margin_Rigth_left"
            android:layout_marginTop="@dimen/Regester_activity_margin_between"
            android:layout_marginRight="@dimen/Regester_activity_margin_Rigth_left"
            android:layout_marginBottom="@dimen/Regester_activity_margin_between"
            android:background="@drawable/shap_size_radius_et"
            android:ems="10"
            android:hint="@string/Email_address"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/Regester_activity_et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/Regester_activity_margin_Rigth_left"
            android:layout_marginTop="@dimen/Regester_activity_margin_between"
            android:layout_marginRight="@dimen/Regester_activity_margin_Rigth_left"
            android:layout_marginBottom="@dimen/Regester_activity_margin_between"
            android:background="@drawable/shap_size_radius_et"
            android:ems="10"
            android:hint="@string/User_name"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Regester_activity_margin_between"
            android:layout_marginBottom="@dimen/Regester_activity_margin_between"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Regester_activity_et_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/Regester_activity_margin_Rigth_left"
                android:layout_marginTop="@dimen/Regester_activity_margin_between"
                android:layout_marginEnd="@dimen/Regester_activity_margin_between"
                android:layout_marginBottom="@dimen/Regester_activity_margin_between"
                android:layout_weight="1"
                android:background="@drawable/shap_size_radius_et"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/Pass"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/Regester_activity_et_re_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/Regester_activity_margin_between"
                android:layout_marginTop="@dimen/Regester_activity_margin_between"
                android:layout_marginEnd="@dimen/Regester_activity_margin_Rigth_left"
                android:layout_marginBottom="@dimen/Regester_activity_margin_between"
                android:layout_weight="1"
                android:background="@drawable/shap_size_radius_et"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/Re_pass"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textSize="24sp" />

        </LinearLayout>

        <Spinner
            android:id="@+id/Regester_activity_sp_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/Regester_activity_margin_Rigth_left"
            android:layout_marginTop="@dimen/Regester_activity_margin_between"
            android:layout_marginRight="@dimen/Regester_activity_margin_Rigth_left"
            android:layout_marginBottom="@dimen/Regester_activity_margin_between"
            android:entries="@array/country" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Regester_activity_et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Regester_activity_margin_Rigth_left"
                android:layout_marginTop="@dimen/Regester_activity_margin_between"
                android:layout_marginRight="@dimen/Regester_activity_margin_Rigth_left"
                android:layout_marginBottom="@dimen/Regester_activity_margin_between"
                android:background="@drawable/shap_size_radius_et"
                android:ems="10"
                android:hint="@string/DatePicker"
                android:inputType="text|textMultiLine"
                android:padding="8dp"
                android:textSize="24sp" />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/Regester_activity_margin_Rigth_left"
            android:layout_marginTop="@dimen/Regester_activity_margin_between"
            android:layout_marginRight="@dimen/Regester_activity_margin_Rigth_left"
            android:layout_marginBottom="@dimen/Regester_activity_margin_between"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Regester_activity_rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/Regester_activity_rb_female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/female"
                android:textSize="24sp" />

        </RadioGroup>

        <Button
            android:id="@+id/Regester_activity_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/Regester_activity_margin_top_save"
            android:layout_marginBottom="@dimen/Regester_activity_margin_between"
            android:layout_weight="1"
            android:background="@drawable/shpe_size_radius_btn_save"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>